# iphone_navigation

./: README.md
iphione_slam/: CMakeLists.txt  package.xml  setup.py
iphione_slam/launch/: depth_to_pc.launch  iphone_slam.launch  iphone_slam_0.launch
iphione_slam/scripts/: iphoneros_bak.py  iphoneros_new.py  pc_to_world.py  phone.py  phone_msg_pb2.py  phone_subscriber_demo.py  pub_iphone_trans.py  pub_iphone_trans_0.py  pub_iphone_trans_1.py  pub_odom.py  pub_pc.py  utils.py
iphone_planning/local_planner/launch/: local_planner.launch
iphone_planning/local_planner/src/: localPlanner.cpp
iphone_planning/terrain_analysis/launch/: terrain_analysis.launch
iphone_planning/terrain_analysis/src/: terrainAnalysis.cpp
iphone_planning/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
iphone_planning/vehicle_simulator/launch/: system_real_robot.launch  vehicle_simulator.launch  vehicle_simulator_snake.launch
iphone_planning/vehicle_simulator/log/: metrics_2023-4-14-20-24-24.txt  metrics_2024-10-22-15-36-41.txt  metrics_2025-4-9-19-47-24.txt  trajectory_2023-4-14-20-24-24.txt  trajectory_2024-10-22-15-36-41.txt  trajectory_2025-4-9-19-47-24.txt
iphone_planning/vehicle_simulator/meshes/: five_Link.STL  four_Link.STL  head_link.STL  one_Link.STL  tail_Link.STL  three_Link.STL  two_Link.STL
iphone_planning/vehicle_simulator/rviz/: vehicle_simulator.rviz
iphone_planning/vehicle_simulator/urdf/: snake_URDF.SLDASM.csv  snake_URDF.SLDASM.urdf
